apps/vaultwarden/base/vaultwarden-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vaultwarden
  name: vaultwarden
spec:
  ports:
    - name: "web"
      port: 80
      targetPort: 80
  selector:
    app: vaultwarden
