apps/vaultwarden/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure-front
    - websecure-local
  tls: {}
  routes:
  - match: Host(`vault.steffenillium.de`)
    kind: Rule
    services:
    - name: vaultwarden
      port: 80
